added scroll behaviour smooth

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,10 @@
  ** - 01 - Default CSS
  **************************************/
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     padding: 0;
     margin: 0;
